# enigma

./: .coveragerc  .gitignore  .pre-commit-config.yaml  prospector.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
engima/analysis/: fitness.py
enigma/: __init__.py  core.py
enigma/analysis/: __init__.py  fitness.py
enigma/machine/: __init__.py  _machine.py  plugboard.py  reflector.py  rotor.py  wiring.py
tests/test_analysis/: test_fitness.py
tests/test_machine/: test_rotor.py  test_wiring.py
