[tool.poetry]
name = "enigma"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
isort = "^5.8.0"
pre-commit = "^2.12.0"
flake8-bugbear = "^21.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
