[tool.poetry]
name = "enigma"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "21.12b0"
mypy = "0.910"
isort = "^5.10"
pre-commit = "^2.16.0"
prospector = "^1.5.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
src_paths = ["enigma", "tests"]
use_parentheses= true
multi_line_output= 3
include_trailing_comma= true


[tool.mypy]
python_version="3.9"
files= ["enigma", "tests"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
